--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "app_suporte": "file:",
+    "axios": "^1.8.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
